add note about requirements for redhat 7 and 9 instances

--- a/modules/client-configuration/pages/clients-rh-rhui.adoc
+++ b/modules/client-configuration/pages/clients-rh-rhui.adoc
@@ -53,6 +53,29 @@ Clients using Satellite certificates are not supported with {productname} Server
 ====
 
 
+[IMPORTANT]
+====
+The PAYG connection regular check with the client to get the latest authentication data. It is important that the client stay running and is regular updated.
+If this does not happen, repository synchronization will fail with authentication errors at some point in time.
+====
+
+
+[NOTE]
+====
+Update the a {redhat} 7 instance before connecting it.
+===
+
+
+// mc: this depends on the version of Jsch we use. The current version 0.1.55 only support rsa-ssh auth
+//     which is forbidden with the DEFAULT policy. If we decide to switch to a different implementation
+//     of Jsch (0.2.9 or higher) this limitation is gone and the note can be removed
+[NOTE]
+====
+A {redhat} 9 instance need to be configured with crypto policy `LEGACY` to be able to connect it.
+Execute ``sudo update-crypto-policies --set LEGACY`` to do this.
+====
+
+
 == Connecting to {redhat} update infrastructure
 
 [[proc-connecting-new-rhui]]
