--- a/modules/client-configuration/pages/autoinst-cdrom.adoc
+++ b/modules/client-configuration/pages/autoinst-cdrom.adoc
@@ -7,7 +7,7 @@ One option to prepare such a removable medium is to use Cobbler.
 For information about using Cobbler to prepare an ISO image, see xref:client-configuration:autoinst-cdrom.adoc#build-iso-with-cobbler[Build an ISO Image With Cobbler].
 
 For {suse} systems, it is often recommended to prepare an ISO image using KIWI.
-For information, see xref:client-configuration:autoinst-cdrom.adoc#build-iso-with-kiwi[Build a SUSE ISO Image With KIWI].
+For more information, see xref:client-configuration:autoinst-cdrom.adoc#build-iso-with-kiwi[Build a SUSE ISO Image With KIWI].
 
 In all cases, you use the resulting image to burn a CD-ROM or prepare a USB key.
 
