add snippet for create_bootstrap_repo_register (#2263)
* add snippet for create_bootstrap_repo_register
https://github.com/SUSE/spacewalk/issues/21591
* use client register snippet

--- a/modules/client-configuration/pages/clients-alibaba.adoc
+++ b/modules/client-configuration/pages/clients-alibaba.adoc
@@ -114,7 +114,7 @@ For more information on activation keys, see xref:client-configuration:activatio
 
 == Register Clients
 
-{alibabaclo} clients are registered in the same way as all other clients.
+include::snippets/create_bootstrap_repo_register.adoc[]
 
 Some {alibabaclo}{nbsp}2 instances will fail to register on the first try.
 
@@ -125,5 +125,3 @@ an RPM package, which can cause a conflict on the first attempt to register.
 
 If your instance is based on one of the affected image versions, the client 
 should register correctly on the second registration attempt.
-
-For more information about client registration, see xref:client-configuration:registration-overview.adoc[].
