add snippet for create_bootstrap_repo_register (#2263)
* add snippet for create_bootstrap_repo_register
https://github.com/SUSE/spacewalk/issues/21591
* use client register snippet

--- a/modules/client-configuration/pages/clients-ubuntu.adoc
+++ b/modules/client-configuration/pages/clients-ubuntu.adoc
@@ -175,12 +175,5 @@ We recommend that you remove the line from the [path]``sudoers`` file after the 
 
 == Register Clients
 
-To register your {ubuntu} clients, you need a bootstrap repository.
-By default, bootstrap repositories are automatically created, and regenerated daily for all synchronized products.
-You can manually create the bootstrap repository from the command prompt, using this command:
+include::snippets/create_bootstrap_repo_register.adoc[]
 
-----
-mgr-create-bootstrap-repo
-----
-
-For more information on registering your clients, see xref:client-configuration:registration-overview.adoc[].
