--- a/modules/client-configuration/pages/clients-rh-cdn.adoc
+++ b/modules/client-configuration/pages/clients-rh-cdn.adoc
@@ -456,15 +456,8 @@ For the complete list of the {redhat} product signing keys, see https://access.r
 ====
 
 
+
 == Register Clients
 
-To register your {redhat} clients, you need a bootstrap repository.
-By default, bootstrap repositories are automatically created, and regenerated daily for all synchronized products.
-You can manually create the bootstrap repository from the command prompt, using this command:
-
-----
-mgr-create-bootstrap-repo
-----
-
-For more information on registering your clients, see xref:client-configuration:registration-overview.adoc[].
+include::snippets/create_bootstrap_repo_register.adoc[]
 
