--- a/modules/client-configuration/pages/clients-sleses.adoc
+++ b/modules/client-configuration/pages/clients-sleses.adoc
@@ -273,6 +273,5 @@ This gives you a backup of the original synchronization data.
 
 == Register {sll} Clients
 
-Your {sll} clients are now ready to be registered.
+include::snippets/create_bootstrap_repo_register.adoc[]
 
-For more information on registering your clients, see xref:client-configuration:registration-overview.adoc[].
