Retail Best Practices

--- a/modules/retail/nav-retail-guide.adoc
+++ b/modules/retail/nav-retail-guide.adoc
@@ -52,6 +52,11 @@ endif::[]
 *** xref:dedicated-with-scripts.adoc[Dedicated terminal network configured using scripts]
 *** xref:shared-central-dns.adoc[Shared network with centralized DNS]
 *** xref:containerized-saltboot.adoc[Retail Environment using Containerized Proxy]
+
+** xref:retail-best-practices.adoc[Best Practices]
+
+** xref:retail-image-pillar.adoc[Image Pillar]
+
 ** xref:retail-next.adoc[What Next?]
 
 
