Added page to navigation bar.

--- a/modules/administration/nav-administration-guide.adoc
+++ b/modules/administration/nav-administration-guide.adoc
@@ -17,6 +17,7 @@ endif::[]
 
 ** xref:auth-methods.adoc[Authentication Methods]
 *** xref:auth-methods-sso.adoc[Authentication With SSO]
+**** xref:administration:auth-methods-sso-example.adoc[Example SSO Implementation]
 *** xref:auth-methods-pam.adoc[Authentication With PAM]
 ** xref:backup-restore.adoc[Backing Up and Restoring]
 ** xref:content-staging.adoc[Content Staging]
