--- a/modules/client-configuration/pages/client-proxy.adoc
+++ b/modules/client-configuration/pages/client-proxy.adoc
@@ -23,7 +23,7 @@ You can move Salt and Salt SSH push clients between proxies without the need to 
 [IMPORTANT]
 ====
 You cannot move chained proxies.
-In such a case, create a new proxy, move the clients, and delete the old proxy.
+Instead of moving a chained proxy, create a new proxy, move the clients, and delete the old proxy.
 ====
 
 [NOTE]
