move chained proxies (not) (#2281)
* move chained proxies (not)
https://github.com/SUSE/spacewalk/issues/21649
* Update modules/client-configuration/pages/client-proxy.adoc

--- a/modules/client-configuration/pages/client-proxy.adoc
+++ b/modules/client-configuration/pages/client-proxy.adoc
@@ -28,7 +28,11 @@ A list of chained proxies for a Salt client can be seen by clicking the name of 
 
 You can move Salt and Salt SSH push clients between proxies without the need to repeat the registration process.
 
-
+[IMPORTANT]
+====
+You cannot move chained proxies.
+Instead of moving a chained proxy, create a new proxy, move the clients, and delete the old proxy.
+====
 
 [NOTE]
 ====
