Fixed step in procedure. Added file to nav bar.

--- a/modules/administration/nav-administration-guide.adoc
+++ b/modules/administration/nav-administration-guide.adoc
@@ -38,6 +38,7 @@ endif::[]
 // Authentication Methods
 ** xref:auth-methods.adoc[Authentication Methods]
 *** xref:auth-methods-sso.adoc[Authentication With SSO]
+**** xref:administration:auth-methods-sso-example.adoc[Example SSO Implementation]
 *** xref:auth-methods-pam.adoc[Authentication With PAM]
 // SSL Certificates
 ** xref:ssl-certs.adoc[SSL Certificates]
