--- a/modules/administration/pages/auth-methods-sso-example.adoc
+++ b/modules/administration/pages/auth-methods-sso-example.adoc
@@ -80,7 +80,7 @@ Keycloak refers to endpoints as clients.
 * Toggle the ``Include AuthnStatement`` switch to ``On``.
 * Toggle the ``Sign Assertions`` switch to ``On``.
 * In the ``Signature Algorithm`` field, select ``RSA_SHA1``.
-* In the ``SAML Signature Key Name`` field, select the key.
+* In the ``SAML Signature Key Name`` field, select ``Key ID``.
 * In the ``Canonicalization Method`` field, select ``Exclusive``.
 . In the ``Fine Grain SAML Endpoint Configuration`` section, add the two endpoints using these details:
 +
