Unified SUSE Manager and Uyuni Proxy registration (#1520)
* In the Installation and Upgrade Guide, unified SUSE Manager and
  Uyuni Proxy registration; mentioned registering Uyuni Proxy with the
  Web UI.
https://github.com/SUSE/spacewalk/issues/15429

* Update modules/installation-and-upgrade/pages/uyuni-proxy-registration.adoc

--- a/modules/installation-and-upgrade/pages/uyuni-proxy-registration.adoc
+++ b/modules/installation-and-upgrade/pages/uyuni-proxy-registration.adoc
@@ -1,7 +1,7 @@
 [[proxy-register]]
 = Proxy Registration
 
-Proxy systems are registered as Salt clients using a bootstrap script.
+Proxy systems are registered as Salt clients using bootstrap script or {webui}.
 
 This procedure describes software channel setup and registering the installed proxy as the {productname} client, using an activation key.
 
@@ -46,8 +46,9 @@ For more information, see xref:client-configuration:clients-opensuseleap.adoc[].
     For more information, see xref:client-configuration:registration-bootstrap.adoc[].
 
 . Navigate to menu:Salt[Keys] and accept the key.
-    When the key is accepted, the new proxy will show in menu:Systems[Overview] in the [guimenu]``
-    Recently Registered Systems`` section.
+  When the key is accepted, the new proxy will show in menu:Systems[Overview] in the [guimenu]``Recently Registered Systems`` section.
+
+. Alternatively, in the {productname} {webui}, navigate to menu:System[Bootstrapping].
 
 . Navigate to menu:System Details[Software > Software Channels], and check that the proxy channel is selected.
 
