cobbler <sp> etc.

--- a/modules/administration/pages/troubleshooting/tshoot-highsynctimesoverwan.adoc
+++ b/modules/administration/pages/troubleshooting/tshoot-highsynctimesoverwan.adoc
@@ -22,12 +22,12 @@ If more detailed instructions are required, put them in a "Resolving" procedure:
 
 
 
-Depending on what changes are executed in the WebUI or via an API call to distribution or system settings, [literal]``cobbler sync`` command may be required to transfer files from {productname} Server to {productname} Proxy systems.
-To accomplish this, cobbler uses a list of proxies specified in [literal]``/etc/cobbler/settings``.
+Depending on what changes are executed in the WebUI or via an API call to distribution or system settings, [command]``cobbler sync`` command may be required to transfer files from {productname} Server to {productname} Proxy systems.
+To accomplish this, Cobbler uses a list of proxies specified in [literal]``/etc/cobbler/settings``.
 
-Due to its design, [literal]``cobbler sync`` is not able to sync only the changed or recently added files.
+Due to its design, [command]``cobbler sync`` is not able to sync only the changed or recently added files.
 
-Instead, executing [literal]``cobbler sync`` triggers a full sync of the [literal]``/srv/tftpboot`` directory to all specified proxies configured in [literal]``/etc/cobbler/settings``.
+Instead, executing [command]``cobbler sync`` triggers a full sync of the [literal]``/srv/tftpboot`` directory to all specified proxies configured in [literal]``/etc/cobbler/settings``.
 It is also influenced by the latency of the WAN connection between the involved systems.
 
 The process of syncing may take a considerable amount of time to finish according to the logs in [literal]``/var/log/cobbler/``.
@@ -72,7 +72,7 @@ The proposed approach using the script is beneficial in the following environmen
 
 * SUSE Manager Proxy systems are connected via a WAN connection;
 * [literal]``/srv/tftboot`` contains a high number of files for distributions and client PXE boot files, in total several thousand files;
-* Any proxy in [literal]``/etc/cobbler/settingsl`` has been disabled, otherwise {productname} will continue to sync content to the proxies.
+* Any proxy in [literal]``/etc/cobbler/settings`` has been disabled, otherwise {productname} will continue to sync content to the proxies.
 +
 ----
 #proxies:
@@ -98,15 +98,15 @@ tcpdump -i ethX -s 200 host <ip-address-of-susemanager> and not ssh
 * This will only capture a package size of 200 which is sufficient to run an analysis.
 * Adjust ethX to the respective network interface {productname} uses to communicate with the proxy.
 * At last, ssh communication will not be captured to reduce the number of packages even further.
-. Start a cobbler sync.
-* To force a sync, delete the cobbler json cache file first and then issue cobbler sync:
+. Start a [command]``cobbler sync``.
+* To force a sync, delete the Cobbler json cache file first and then issue [command]``cobbler sync``:
 +
 ----
 rm /var/lib/cobbler/pxe_cache.json
 cobbler sync
 ----
 +
-. When cobbler is finished, stop the TCPdumps.
+. When {command]``cobbler sync`` is finished, stop the TCPdumps.
 . Open the TCPdumps using Wireshark, go to [guimenu]``Statistics > Conversations`` and wait for the dump to be analyzed.
 . Switch to the TCP tab.
   The number shown on this tab gives the total number of conversations captured between SUSE Manager and SUSE Manager Proxy.
