--- a/modules/common-workflows/pages/workflow-inplace-sles-upgrade.adoc
+++ b/modules/common-workflows/pages/workflow-inplace-sles-upgrade.adoc
@@ -167,8 +167,8 @@ Procedure: Migrating {trad} clients
 . Assign your Autoinstallation Profile in [guimenu]``System Details → Provisioning`` for one system, or in the [guimenu]``Provisioning`` tab in [literal]``SSM`` for as many systems as you need. 
  If your system is able to use PXE, it can be completely automated from here.
 
-. If your system is not able to use PXE, you can create an ISO to install with cobbler commands using the SUSE Manager server CLI. 
-  Copy the ISO file output to the machine you wish to migrate and boot from it. 
+. If your system is not able to use PXE, you can create an ISO to install with [command]``cobbler`` commands using the SUSE Manager Server CLI.
+  Copy the ISO file output to the machine you wish to migrate and boot from it.
   View all the profiles with this:
 +
 ----
