start with normalization

--- a/modules/client-configuration/pages/virt-xenkvm.adoc
+++ b/modules/client-configuration/pages/virt-xenkvm.adoc
@@ -4,9 +4,9 @@
 Xen and KVM virtualized clients can be managed directly in {productname}.
 
 To begin, you need to set up a virtual host on your {productname} Server.
-You can then set up autoinstallation using {ay} or {kickstart} for future virtual hosts, and for virtual guests.
+You can then set up autoinstallation using {ay} or {kickstart} for additional virtual hosts and for virtual guests.
 
-This section also includes information about administering your virtual guests after they have been installed.
+This section also includes information about administering virtual guests after they have been installed.
 
 
 
