--- a/modules/client-configuration/pages/virt-xenkvm.adoc
+++ b/modules/client-configuration/pages/virt-xenkvm.adoc
@@ -12,17 +12,16 @@ This section also includes information about administering virtual guests after 
 
 == Host Setup
 
-The way that you set up Xen or KVM on a VM host depends on what operating system you want to use on its associated guests.
+The way that you set up Xen or KVM on a VM host depends on operating system you want to use on its associated guests:
 
-For {suse} operating systems, see the SLES Virtualization Guide available from https://documentation.suse.com/sles/15-SP3/html/SLES-all/book-virtualization.html.
-
-For {rhel} operating systems, refer to the Red Hat documentation for your version.
+* For {suse} operating systems, see the SLES Virtualization Guide available from https://documentation.suse.com/sles/15-SP3/html/SLES-all/book-virtualization.html.
+* For {rhel} operating systems, refer to the Red Hat documentation for your version.
 
 {productname} uses [systemitem]``libvirt`` to install and manage guests.
-You must have the [daemon]``libvirtd`` package installed on your host.
-In most cases, the default settings are usually sufficient, and you should not need to adjust them.
+You must have the [package]``libvirtd`` package installed on your host.
+In most cases, the default settings are sufficient and you do not need to adjust them.
 However, if you want to access the VNC console on your guests as a non-root user, you need to perform some configuration changes.
-For more information about how to set this up, consult the relevant documentation for your operating system.
+For more information about how to set up the VNC console, see the documentation for your operating system.
 
 You need a bootstrap script on the {productname} Server.
 Your bootstrap script must include the activation key for your host.
