--- a/modules/client-configuration/pages/virt-xenkvm.adoc
+++ b/modules/client-configuration/pages/virt-xenkvm.adoc
@@ -24,16 +24,19 @@ However, if you want to access the VNC console on your guests as a non-root user
 For more information about how to set up the VNC console, see the documentation for your operating system.
 
 You need a bootstrap script on the {productname} Server.
-Your bootstrap script must include the activation key for your host.
+The bootstrap script must include the activation key for your host.
 We also recommend that you include your GPG key for additional security.
 For more on creating a bootstrap script, see xref:client-configuration:registration-bootstrap.adoc[].
 
-When your bootstrap script is ready, execute it on the host to register it with the {productname} Server.
-For more on client registration, see xref:client-configuration:registration-overview.adoc[].
+When the bootstrap script is ready, use it to register the host with the {productname} Server.
+For more information about client registration, see xref:client-configuration:registration-overview.adoc[].
 
 For Salt clients, you need to enable the [systemitem]``Virtualization Host`` entitlement.
 This allows you to see VM changes instantly.
-To do this, in the {productname} {webui}, navigate to the [guimenu]``System Details`` page for the host, and click on the [guimenu]``Properties`` tab.
+
+.Procedure:
+
+In the {productname} {webui}, navigate to the [guimenu]``System Details`` page for the host, and click the [guimenu]``Properties`` tab.
 Alternatively, the [systemitem]``Virtualization Host`` entitlement can be added at the registration key level.
 In the [guimenu]``Add-On System Types`` section, check [guimenu]``Virtualization Host``, and click btn:[Update Properties] to save the changes.
 Restart the Salt minion service to activate the change:
