--- a/modules/client-configuration/pages/virt-xenkvm.adoc
+++ b/modules/client-configuration/pages/virt-xenkvm.adoc
@@ -36,52 +36,41 @@ This allows you to see VM changes instantly.
 
 .Procedure:
 
-In the {productname} {webui}, navigate to the [guimenu]``System Details`` page for the host, and click the [guimenu]``Properties`` tab.
-Alternatively, the [systemitem]``Virtualization Host`` entitlement can be added at the registration key level.
-In the [guimenu]``Add-On System Types`` section, check [guimenu]``Virtualization Host``, and click btn:[Update Properties] to save the changes.
-Restart the Salt minion service to activate the change:
+. In the {productname} {webui}, navigate to the [guimenu]``System Details`` page for the host, and click the [guimenu]``Properties`` tab.
+  Alternatively, the [systemitem]``Virtualization Host`` entitlement can be added at the registration key level.
+. In the [guimenu]``Add-On System Types`` section, check [guimenu]``Virtualization Host``, and click btn:[Update Properties] to save the changes.
+. Restart the [systemitem]``salt-minion`` service to activate the new configuration:
 
++
 ----
 systemctl restart salt-minion
 ----
 
-For traditional clients, by default, VM hosts use the [systemitem]``rhnsd`` service  to check for scheduled actions.
-The check occurs every four hours, to balance load in environments where there are a lot of clients.
-This can create delays of up to four hours before an action is carried out.
-When you are managing VM guests, this long delay is not always ideal, especially for actions like rebooting a guest.
-To address this, you can disable the [systemitem]``rhnsd`` service, and enable the [daemon]``osad`` service.
-The [daemon]``osad`` service receives commands using a jabber protocol, and executes commands instantly.
 
-To disable the [systemitem]``rhnsd`` service, and enable the [daemon]``osad`` daemon, run these commands as the root user:
-
-----
-service rhnsd stop
-service rhnsd disable
-----
-
-----
-service osad enable
-service osad start
-----
 
 == Autoinstallation
-
 
 You can use {ay} or {kickstart} to automatically install and register Xen and KVM guests.
 
 You need an activation key for the VM host you want to register the guests to, and for each guest.
-Your activation key must have the [systemitem]``provisioning`` and [systemitem]``Virtualization Platform`` entitlements.
-Your activation key must also have access to the [package]``mgr-virtualization-host`` and  [package]``mgr-osad`` packages.
-For more on creating activation keys, see xref:client-configuration:activation-keys.adoc[].
+The activation key must have the [systemitem]``provisioning`` and [systemitem]``Virtualization Platform`` entitlements.
+// FIXME: Does Salt require sth special?
+// The activation key must also have access to the [package]``mgr-virtualization-host`` and  [package]``mgr-osad`` packages.
+For more information about creating activation keys, see xref:client-configuration:activation-keys.adoc[].
 
 If you want to automatically register the guests with {productname} after installation, you need to create a bootstrap script.
-For more on creating a bootstrap script, see xref:client-configuration:registration-bootstrap.adoc[].
+For more information about creating a bootstrap script, see xref:client-configuration:registration-bootstrap.adoc[].
 
+
+
+////
+// Still any limitations for Salt clients?
 [IMPORTANT]
 ====
 Autoinstallation of VM guests works only if they are configured as Traditional clients.
 Salt clients can be created using a template disk image, but not by using {ay} or {kickstart}.
 ====
+////
 
 
 
