first walkthru done

--- a/modules/client-configuration/pages/virt-xenkvm.adoc
+++ b/modules/client-configuration/pages/virt-xenkvm.adoc
@@ -79,10 +79,10 @@ Salt clients can be created using a template disk image, but not by using {ay} o
 You need to create an autoinstallable distribution on the VM host to be able to autoinstall clients from {productname}.
 The distribution can be made available from a mounted local or remote directory, or on a loop-mounted ISO image.
 
-The configuration of the autoinstallable distribution differs depending on whether you are using a SLES or {rhel} operating system on your guests.
+The configuration of the autoinstallable distribution differs depending on whether you are using a {rhel} or {suse} operating system on your guests.
 The packages for a {rhel} installation are fetched from the associated base channel.
 Packages for installing {suse} systems are fetched from the autoinstallable distribution.
-Therefore, for SLES systems, the autoinstallable distribution must be a complete installation source.
+Therefore, for {suse} systems, the autoinstallable distribution must be a complete installation source.
 
 .Paths for autoinstallable distributions
 [cols="1,1,1", options="header"]
@@ -90,13 +90,13 @@ Therefore, for SLES systems, the autoinstallable distribution must be a complete
 
 | Operating System Type | Kernel Location | initrd Location
 | {rhel} | [path]``images/pxeboot/vmlinuz``    | [path]``images/pxeboot/initrd.img``
-| SLES | [path]``boot/<arch>/loader/initrd`` | [path]``boot/<arch>/loader/linux``
+| {suse} | [path]``boot/<arch>/loader/initrd`` | [path]``boot/<arch>/loader/linux``
 |===
 
 In all cases, ensure that the base channel matches the autoinstallable distribution.
 
 Before you begin, ensure you have a installation media available to your VM Host.
-It can be on a network resource, a local directory, or an loop-mounted ISO image.
+It can be on a remote resource, a local directory, or a loop-mounted ISO image.
 Additionally, ensure that all files and directories are world-readable.
 
 
@@ -179,7 +179,7 @@ If you want your guests to be automatically registered as soon as they are insta
 
 This section gives instructions for adding a bootstrap script to an existing {ay} profile.
 
-For more on creating a bootstrap script, see xref:client-configuration:registration-bootstrap.adoc[].
+For more information about creating a bootstrap script, see xref:client-configuration:registration-bootstrap.adoc[].
 For instructions on how to do this for {kickstart], refer to the Red Hat documentation for your installation.
 
 .Procedure: Adding a Bootstrap Script to an {ay} Profile
@@ -214,7 +214,7 @@ Place the bootstrap snippet inside the existing ``<scripts>`` section.
 === Autoinstall VM Guests
 
 
-Once you have everything set up, you can start to autoinstall your VM guests.
+When you have everything set up, you can start to autoinstall your VM guests.
 
 [IMPORTANT]
 ====
@@ -225,7 +225,7 @@ If a guest installation starts while another one is still running, the running i
 
 
 . In the {productname} {webui}, navigate to menu:Systems[Overview], and select the VM host you want to install guests on.
-. Navigate to the [guiitem]``Virtualization`` tab, and the [guimenu]``Provisioning`` subtab.
+. Navigate to the [guimenu]``Virtualization`` tab, and the [guimenu]``Provisioning`` subtab.
 . Select the autoinstallation profile you want to use, and specify a unique name for the guest.
 . Choose a proxy if applicable and enter a schedule.
 . To change the guest's hardware profile and configuration options, click btn:[Advanced Options].
@@ -239,9 +239,8 @@ If a guest installation starts while another one is still running, the running i
 You can use the {productname} {webui} to manage your VM Guests, including actions like shutting down, restarting, and adjusting CPU and memory allocations.
 
 To do this, you need your Xen or KVM VM host registered to the {productname} Server, and have the [daemon]``libvirtd`` service running on the host.
-For traditional clients, you also need the [package]``mgr-cfg-actions`` package installed on your {productname} Server.
 
 In the {productname} {webui}, navigate to menu:Systems[System List], and click on the VM host for the guests you want to manage.
 Navigate to the [guimenu]``Virtualization`` tab to see all guests registered to this host, and access the management functions.
 
-For more information on managing VM guests using the {webui}, see xref:reference:systems/system-details/sd-virtualization.adoc[].
+For more information about managing VM guests using the {webui}, see xref:reference:systems/system-details/sd-virtualization.adoc[].
