--- a/modules/client-configuration/pages/clients-slemicro.adoc
+++ b/modules/client-configuration/pages/clients-slemicro.adoc
@@ -182,10 +182,10 @@ include::snippets/check_sync_cli.adoc[]
 
 [WARNING]
 ====
-SLE Micro clients require reboot after registering.
-Reboot is automatically scheduled after registration is completed, but it is respecting the default reboot manager maintenance window.
+SLE Micro clients require a reboot after registering.
+Although a reboot is automatically scheduled after registration is completed, it is respecting the default reboot manager maintenance window.
 This window may be several hours after the client is registered.
-To speed up {micro} registration, manually reboot the client after the registration script finishes.
+It is advisable to manually reboot the client after the registration script finishes, to speed up the registration and to see the system appear in the system list.
 ====
 
 include::snippets/create_bootstrap_repo_register.adoc[]
