Update the RHEL channel names

--- a/modules/client-configuration/pages/clients-rh-rhui.adoc
+++ b/modules/client-configuration/pages/clients-rh-rhui.adoc
@@ -237,20 +237,20 @@ The channels you need for this procedure are:
 | Client Channel
 | Tools Channel
 
-| {redhat} 9
-| el9-pool-x86_64
+| {redhat} 7
+| rhel7-pool-uyuni-x86_64
 | -
-| el9-manager-tools-pool-x86_64, el9-manager-tools-updates-x86_64
+| rhel7-uyuni-client-x86_64
 
 | {redhat} 8
-| rhel8-pool-x86_64
+| rhel8-pool-uyuni-x86_64
 | -
-| res8-manager-tools-pool-x86_64
+| rhel8-uyuni-client-x86_64
 
-| {redhat} 7
-| rhel-x86_64-server-7
+| {redhat} 9
+| rhel9-pool-uyuni-x86_64
 | -
-| res7-suse-manager-tools-x86_64
+| rhel9-uyuni-client-x86_64
 
 |===
 
@@ -351,27 +351,34 @@ include::snippets/manual_repos.adoc[]
 The channels you need for this procedure are:
 
 [[redhat-rhui-channels-custom]]
+
+ifeval::[{suma-content} == true]
 [cols="1,1,1", options="header"]
 .Red Hat Custom Channels
 |===
 
 // SUSE Liberty Linux not available at Uyuni for now
 | OS Version | Base Product          | Base Channel
-ifeval::[{suma-content} == true]
 | {redhat} 9 | RHEL and Liberty 9 Base | el9-pool-x86_64
 | {redhat} 8 | RHEL or SLES ES or CentOS 8 Base | rhel8-pool-x86_64
+| {redhat} 7 | RHEL7 Base x86_64 | rhel7-pool-x86_64
+
+|===
 endif::[]
 
 // SUSE Liberty Linux not available at Uyuni for now
 ifeval::[{uyuni-content} == true]
-| {redhat} 9 | RHEL | el9-pool-x86_64
-| {redhat} 8 | RHEL or CentOS 8 Base | rhel8-pool-x86_64
-endif::[]
+[cols="1,1", options="header"]
+.Red Hat Custom Channels
+|===
 
-// SUSE Liberty Linux not available at Uyuni for now
-| {redhat} 7 | RHEL7 Base x86_64 | rhel7-pool-x86_64
+| OS Version | Base Channel
+| {redhat} 7 | rhel7-pool-uyuni-x86_64
+| {redhat} 8 | rhel8-pool-uyuni-x86_64
+| {redhat} 9 | rhel9-pool-uyuni-x86_64
 
 |===
+endif::[]
 
 
 include::snippets/manual_channels.adoc[]
