--- a/modules/client-configuration/pages/clients-rh-cdn.adoc
+++ b/modules/client-configuration/pages/clients-rh-cdn.adoc
@@ -190,19 +190,19 @@ The channels you need for this procedure are:
 | Tools Channel
 
 | {redhat} 7
-| rhel-x86_64-server-7
+| rhel7-pool-uyuni-x86_64
 | -
-| res7-suse-manager-tools-x86_64
+| rhel7-uyuni-client-x86_64
 
 | {redhat} 8
-| rhel8-pool-x86_64
+| rhel8-pool-uyuni-x86_64
 | -
-| res8-manager-tools-pool-x86_64
+| rhel8-uyuni-client-x86_64
 
 | {redhat} 9
-| el9-pool-x86_64
+| rhel9-pool-uyuni-x86_64
 | -
-| el9-manager-tools-pool-x86_64, el9-manager-tools-updates-x86_64
+| rhel9-uyuni-client-x86_64
 
 |===
 
@@ -302,6 +302,8 @@ include::snippets/manual_repos.adoc[]
 The channels you need for this procedure are:
 
 [[redhat-channels-custom]]
+
+ifeval::[{suma-content} == true]
 [cols="1,1,1", options="header"]
 .Red Hat Custom Channels
 |===
@@ -309,16 +311,24 @@ The channels you need for this procedure are:
 | OS Version | Base Product          | Base Channel
 | {redhat} 7 | RHEL7 Base x86_64 | rhel7-pool-x86_64
 // SUSE Liberty Linux not available at Uyuni for now
-ifeval::[{suma-content} == true]
 | {redhat} 8 | RHEL or SLES ES or CentOS 8 Base | rhel8-pool-x86_64
 | {redhat} 9 | RHEL and Liberty 9 Base | el9-pool-x86_64
+
+|===
 endif::[]
 // SUSE Liberty Linux not available at Uyuni for now
-ifeval::[{suma-content} == true]
-| {redhat} 8 | RHEL or CentOS 8 Base | rhel8-pool-x86_64
-| {redhat} 9 | RHEL | el9-pool-x86_64
-endif::[]
+ifeval::[{uyuni-content} == true]
+[cols="1,1", options="header"]
+.Red Hat Custom Channels
 |===
+
+| OS Version | Base Channel
+| {redhat} 7 | rhel7-pool-uyuni-x86_64
+| {redhat} 8 | rhel8-pool-uyuni-x86_64
+| {redhat} 9 | rhel9-pool-uyuni-x86_64
+
+|===
+endif::[]
 
 
 include::snippets/manual_channels.adoc[]
