--- a/modules/common-workflows/pages/workflow-sp-upgrade-webui.adoc
+++ b/modules/common-workflows/pages/workflow-sp-upgrade-webui.adoc
@@ -29,7 +29,7 @@ image::upgradesles02.png[scaledwidth=80%]
   You will see two targets, SP4 and SP5. 
 +
 image::upgradesles03.png[scaledwidth=80%]
-. Select [literal]``SUSE Linux Enterprise Server 15 SP5 x86_64 (BETA)``.
+. Select [literal]``SUSE Linux Enterprise Server 15 SP5 x86_64``.
   This will expand further as shown below.
 +
 image::upgradesles04.png[scaledwidth=80%]
