--- a/modules/client-configuration/pages/clients-slemicro.adoc
+++ b/modules/client-configuration/pages/clients-slemicro.adoc
@@ -203,18 +203,15 @@ include::snippets/check_sync_cli.adoc[]
 
 [WARNING]
 ====
-SLE Micro clients require reboot after registering.
-
-Reboot is automatically scheduled after registration is completed, but it is respecting the default reboot manager maintenance window.
+SLE Micro clients require a reboot after registering.
+Although a reboot is automatically scheduled after registration is completed, it is respecting the default reboot manager maintenance window.
 This window may be several hours after the client is registered.
-To speed up {micro} registration, manually reboot the client after the registration script finishes.
+It is advisable to manually reboot the client after the registration script finishes, to speed up the registration and to see the system appear in the system list.
 ====
 
-<<<<<<< HEAD
-For more information about registering clients, see xref:client-configuration:registration-methods.adoc[].
 =======
+
 include::snippets/create_bootstrap_repo_register.adoc[]
->>>>>>> 4d4f2e442 (add snippet for create_bootstrap_repo_register (#2263))
 
 
 
