--- a/modules/client-configuration/pages/virt-xenkvm.adoc
+++ b/modules/client-configuration/pages/virt-xenkvm.adoc
@@ -4,82 +4,73 @@
 Xen and KVM virtualized clients can be managed directly in {productname}.
 
 To begin, you need to set up a virtual host on your {productname} Server.
-You can then set up autoinstallation using {ay} or {kickstart} for future virtual hosts, and for virtual guests.
+You can then set up autoinstallation using {ay} or {kickstart} for additional virtual hosts and for virtual guests.
 
-This section also includes information about administering your virtual guests after they have been installed.
+This section also includes information about administering virtual guests after they have been installed.
 
 
 
 == Host Setup
 
-The way that you set up Xen or KVM on a VM host depends on what operating system you want to use on its associated guests.
+The way that you set up Xen or KVM on a VM host depends on operating system you want to use on its associated guests:
 
-For {suse} operating systems, see the SLES Virtualization Guide available from https://documentation.suse.com/sles/15-SP3/html/SLES-all/book-virtualization.html.
-
-For {rhel} operating systems, refer to the Red Hat documentation for your version.
+* For {suse} operating systems, see the SLES Virtualization Guide available from https://documentation.suse.com/sles/15-SP3/html/SLES-all/book-virtualization.html.
+* For {rhel} operating systems, refer to the Red Hat documentation for your version.
 
 {productname} uses [systemitem]``libvirt`` to install and manage guests.
-You must have the [daemon]``libvirtd`` package installed on your host.
-In most cases, the default settings are usually sufficient, and you should not need to adjust them.
+You must have the [package]``libvirtd`` package installed on your host.
+In most cases, the default settings are sufficient and you do not need to adjust them.
 However, if you want to access the VNC console on your guests as a non-root user, you need to perform some configuration changes.
-For more information about how to set this up, consult the relevant documentation for your operating system.
+For more information about how to set up the VNC console, see the documentation for your operating system.
 
 You need a bootstrap script on the {productname} Server.
-Your bootstrap script must include the activation key for your host.
+The bootstrap script must include the activation key for your host.
 We also recommend that you include your GPG key for additional security.
 For more on creating a bootstrap script, see xref:client-configuration:registration-bootstrap.adoc[].
 
-When your bootstrap script is ready, execute it on the host to register it with the {productname} Server.
-For more on client registration, see xref:client-configuration:registration-overview.adoc[].
+When the bootstrap script is ready, use it to register the host with the {productname} Server.
+For more information about client registration, see xref:client-configuration:registration-overview.adoc[].
 
 For Salt clients, you need to enable the [systemitem]``Virtualization Host`` entitlement.
 This allows you to see VM changes instantly.
-To do this, in the {productname} {webui}, navigate to the [guimenu]``System Details`` page for the host, and click on the [guimenu]``Properties`` tab.
-Alternatively, the [systemitem]``Virtualization Host`` entitlement can be added at the registration key level.
-In the [guimenu]``Add-On System Types`` section, check [guimenu]``Virtualization Host``, and click btn:[Update Properties] to save the changes.
-Restart the Salt minion service to activate the change:
 
+.Procedure:
+
+. In the {productname} {webui}, navigate to the [guimenu]``System Details`` page for the host, and click the [guimenu]``Properties`` tab.
+  Alternatively, the [systemitem]``Virtualization Host`` entitlement can be added at the registration key level.
+. In the [guimenu]``Add-On System Types`` section, check [guimenu]``Virtualization Host``, and click btn:[Update Properties] to save the changes.
+. Restart the [systemitem]``salt-minion`` service to activate the new configuration:
+
++
 ----
 systemctl restart salt-minion
 ----
 
-For traditional clients, by default, VM hosts use the [systemitem]``rhnsd`` service  to check for scheduled actions.
-The check occurs every four hours, to balance load in environments where there are a lot of clients.
-This can create delays of up to four hours before an action is carried out.
-When you are managing VM guests, this long delay is not always ideal, especially for actions like rebooting a guest.
-To address this, you can disable the [systemitem]``rhnsd`` service, and enable the [daemon]``osad`` service.
-The [daemon]``osad`` service receives commands using a jabber protocol, and executes commands instantly.
 
-To disable the [systemitem]``rhnsd`` service, and enable the [daemon]``osad`` daemon, run these commands as the root user:
-
-----
-service rhnsd stop
-service rhnsd disable
-----
-
-----
-service osad enable
-service osad start
-----
 
 == Autoinstallation
-
 
 You can use {ay} or {kickstart} to automatically install and register Xen and KVM guests.
 
 You need an activation key for the VM host you want to register the guests to, and for each guest.
-Your activation key must have the [systemitem]``provisioning`` and [systemitem]``Virtualization Platform`` entitlements.
-Your activation key must also have access to the [package]``mgr-virtualization-host`` and  [package]``mgr-osad`` packages.
-For more on creating activation keys, see xref:client-configuration:activation-keys.adoc[].
+The activation key must have the [systemitem]``provisioning`` and [systemitem]``Virtualization Platform`` entitlements.
+// FIXME: Does Salt require sth special?
+// The activation key must also have access to the [package]``mgr-virtualization-host`` and  [package]``mgr-osad`` packages.
+For more information about creating activation keys, see xref:client-configuration:activation-keys.adoc[].
 
 If you want to automatically register the guests with {productname} after installation, you need to create a bootstrap script.
-For more on creating a bootstrap script, see xref:client-configuration:registration-bootstrap.adoc[].
+For more information about creating a bootstrap script, see xref:client-configuration:registration-bootstrap.adoc[].
 
+
+
+////
+// Still any limitations for Salt clients?
 [IMPORTANT]
 ====
 Autoinstallation of VM guests works only if they are configured as Traditional clients.
 Salt clients can be created using a template disk image, but not by using {ay} or {kickstart}.
 ====
+////
 
 
 
@@ -88,10 +79,10 @@ Salt clients can be created using a template disk image, but not by using {ay} o
 You need to create an autoinstallable distribution on the VM host to be able to autoinstall clients from {productname}.
 The distribution can be made available from a mounted local or remote directory, or on a loop-mounted ISO image.
 
-The configuration of the autoinstallable distribution differs depending on whether you are using a SLES or {rhel} operating system on your guests.
+The configuration of the autoinstallable distribution differs depending on whether you are using a {rhel} or {suse} operating system on your guests.
 The packages for a {rhel} installation are fetched from the associated base channel.
 Packages for installing {suse} systems are fetched from the autoinstallable distribution.
-Therefore, for SLES systems, the autoinstallable distribution must be a complete installation source.
+Therefore, for {suse} systems, the autoinstallable distribution must be a complete installation source.
 
 .Paths for autoinstallable distributions
 [cols="1,1,1", options="header"]
@@ -99,13 +90,13 @@ Therefore, for SLES systems, the autoinstallable distribution must be a complete
 
 | Operating System Type | Kernel Location | initrd Location
 | {rhel} | [path]``images/pxeboot/vmlinuz``    | [path]``images/pxeboot/initrd.img``
-| SLES | [path]``boot/<arch>/loader/initrd`` | [path]``boot/<arch>/loader/linux``
+| {suse} | [path]``boot/<arch>/loader/initrd`` | [path]``boot/<arch>/loader/linux``
 |===
 
 In all cases, ensure that the base channel matches the autoinstallable distribution.
 
 Before you begin, ensure you have a installation media available to your VM Host.
-It can be on a network resource, a local directory, or an loop-mounted ISO image.
+It can be on a remote resource, a local directory, or a loop-mounted ISO image.
 Additionally, ensure that all files and directories are world-readable.
 
 
@@ -188,7 +179,7 @@ If you want your guests to be automatically registered as soon as they are insta
 
 This section gives instructions for adding a bootstrap script to an existing {ay} profile.
 
-For more on creating a bootstrap script, see xref:client-configuration:registration-bootstrap.adoc[].
+For more information about creating a bootstrap script, see xref:client-configuration:registration-bootstrap.adoc[].
 For instructions on how to do this for {kickstart], refer to the Red Hat documentation for your installation.
 
 .Procedure: Adding a Bootstrap Script to an {ay} Profile
@@ -223,7 +214,7 @@ Place the bootstrap snippet inside the existing ``<scripts>`` section.
 === Autoinstall VM Guests
 
 
-Once you have everything set up, you can start to autoinstall your VM guests.
+When you have everything set up, you can start to autoinstall your VM guests.
 
 [IMPORTANT]
 ====
@@ -234,7 +225,7 @@ If a guest installation starts while another one is still running, the running i
 
 
 . In the {productname} {webui}, navigate to menu:Systems[Overview], and select the VM host you want to install guests on.
-. Navigate to the [guiitem]``Virtualization`` tab, and the [guimenu]``Provisioning`` subtab.
+. Navigate to the [guimenu]``Virtualization`` tab, and the [guimenu]``Provisioning`` subtab.
 . Select the autoinstallation profile you want to use, and specify a unique name for the guest.
 . Choose a proxy if applicable and enter a schedule.
 . To change the guest's hardware profile and configuration options, click btn:[Advanced Options].
@@ -248,9 +239,8 @@ If a guest installation starts while another one is still running, the running i
 You can use the {productname} {webui} to manage your VM Guests, including actions like shutting down, restarting, and adjusting CPU and memory allocations.
 
 To do this, you need your Xen or KVM VM host registered to the {productname} Server, and have the [daemon]``libvirtd`` service running on the host.
-For traditional clients, you also need the [package]``mgr-cfg-actions`` package installed on your {productname} Server.
 
 In the {productname} {webui}, navigate to menu:Systems[System List], and click on the VM host for the guests you want to manage.
 Navigate to the [guimenu]``Virtualization`` tab to see all guests registered to this host, and access the management functions.
 
-For more information on managing VM guests using the {webui}, see xref:reference:systems/system-details/sd-virtualization.adoc[].
+For more information about managing VM guests using the {webui}, see xref:reference:systems/system-details/sd-virtualization.adoc[].
