--- a/modules/client-configuration/pages/clients-slemicro.adoc
+++ b/modules/client-configuration/pages/clients-slemicro.adoc
@@ -3,9 +3,9 @@
 
 This section contains information about registering clients running these {nbsp}{micro} operating systems:
 
-* {micro}{nbsp}5.1, 5.2, and 5.3 {x86_64}
-* {micro}{nbsp}5.1, 5.2, and 5.3 {arm64}
-* {micro}{nbsp}5.1, 5.2, and 5.3 {zsystems} (s390x)
+* {micro}{nbsp}5.1, 5.2, 5.3 and 5.4 {x86_64}
+* {micro}{nbsp}5.1, 5.2, 5.3 and 5.4 {arm64}
+* {micro}{nbsp}5.1, 5.2, 5.3 and 5.4 {zsystems} (s390x)
 
 The {micro} is an ultra-reliable, lightweight operating system purpose built for edge computing.
 It leverages the enterprise hardened security and compliance components of SUSE Linux Enterprise and merges them with a modern, immutable, developer-friendly OS platform.
@@ -63,6 +63,15 @@ The products you need for this procedure are:
 | {micro} 5.3 {s390x}
 | SUSE Linux Enterprise Micro 5.3 s390x
 
+| {micro} 5.4 {x86_64}
+| SUSE Linux Enterprise Micro 5.4 x86_64
+
+| {micro} 5.4 {arm64}
+| SUSE Linux Enterprise Micro 5.4 aarch64
+
+| {micro} 5.4 {s390x}
+| SUSE Linux Enterprise Micro 5.4 s390x
+
 |===
 
 include::snippets/addchannels_vendor_webui.adoc[]
@@ -116,6 +125,18 @@ The channels you need for this procedure are:
 | {micro} 5.3 {zsystems} ({s390x})
 | sle-micro-5.3-pool-s390x
 | sle-micro-5.3-updates-s390x
+
+| {micro} 5.4 {x86_64}
+| sle-micro-5.4-pool-x86_64
+| sle-micro-5.4-updates-x86_64
+
+| {micro} 5.4 {arm64}
+| sle-micro-5.4-pool-arm64
+| sle-micro-5.4-updates-arm64
+
+| {micro} 5.4 {zsystems} ({s390x})
+| sle-micro-5.4-pool-s390x
+| sle-micro-5.4-updates-s390x
 
 |===
 
